Fixed alignment of megatrend

--- a/css/style.css
+++ b/css/style.css
@@ -200,7 +200,7 @@ html {
 
   #megatrends {
     max-width: 42rem;
-    margin: 7rem auto 0;
+    margin: 5rem auto 0;
     background: rgba(238, 238, 238, 0.9);
     padding: 2.5rem 2.5rem 0;
   }
